trying to fix invalid http_host issue

--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -68,11 +68,18 @@ http {
   }
 
   server {
-    listen 80 default deferred; # for Linux
+    listen 80 default deferred;
+    location / {
+        return 444;
+    }
+  }
+
+  server {
+    listen 80 deferred; # for Linux
     # listen 80 default accept_filter=httpready; # for FreeBSD
 
     client_max_body_size 4G;
-    server_name _;
+    server_name .hwcentral.in;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
@@ -126,9 +133,9 @@ http {
     }
 
     # Error pages
-    #error_page 500 502 503 504 /500.html;
-    #location = /500.html {
-    #  root /path/to/app/current/public;
-    #}
+    # error_page 500 502 503 504 /500.html;
+    # location = /500.html {
+    #   root /path/to/app/current/public;
+    # }
   }
 }
