--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -68,7 +68,7 @@ http {
   }
 
   server {
-    listen 80 default deferred;
+    listen 80 default_server deferred;
     location / {
         return 444;
     }
@@ -76,10 +76,10 @@ http {
 
   server {
     listen 80 deferred; # for Linux
-    # listen 80 default accept_filter=httpready; # for FreeBSD
+    # listen 80 accept_filter=httpready; # for FreeBSD
 
     client_max_body_size 4G;
-    server_name .hwcentral.in;
+    server_name hwcentral.in www.hwcentral.in;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
