--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -68,10 +68,9 @@ http {
   }
 
   server {
-    listen 80 default_server deferred;
-    location / {
-        return 444;
-    }
+    listen 80 default_server;
+    server_name _;
+    return 444;
   }
 
   server {
