cabinet v0.1 finished dumped sites data

--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -69,8 +69,28 @@ http {
 
   server {
     listen 80 default_server;
-    server_name _;
     return 444;
+  }
+
+  server {
+    listen 8878 deferred;
+    root /home/oasis/hwcentral-cabinet;
+    server_name localhost;
+    location / {
+      autoindex on;
+      autoindex_format json;
+      error_page 404 /404.json;
+      client_body_temp_path /home/oasis/hwcentral-cabinet/client_temp;
+      dav_methods PUT;
+      create_full_put_path on;
+      dav_access user:rw group:rw all:rw;
+      allow 127.0.0.1;
+      deny all;
+    }
+
+    location /404.json {
+      alias /home/oasis/hwcentral-cabinet/error_codes/404.json;
+    }
   }
 
   server {
