--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -7,8 +7,7 @@ worker_processes 1;
 # # (or anything < 1024).  Capability-based security may be available for
 # # your system and worth checking out so you won't need to be root to
 # # start nginx to bind on 80
-user nobody nogroup; # for systems with a "nogroup"
-# user nobody nobody; # for systems with "nobody" as a group instead
+user oasis oasis;
 
 # Feel free to change all paths to suit your needs here, of course
 pid /home/oasis/hwcentral/devops/nginx.pid;
