updated gunicorn user to oasis, truncating with sudo for nginx

--- a/devops/supervisor.conf
+++ b/devops/supervisor.conf
@@ -1,7 +1,7 @@
 [program:gunicorn]
 command=/home/oasis/hwcentral/devops/run-gunicorn.sh
 directory=/home/oasis/hwcentral
-user=nobody
+user=oasis
 autostart=true
 autorestart=true
 startsecs=5
