--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
+    - pip install -U pip wheel setuptools
     - pip install -r pip-requirements.txt
 
 ## Customize database
