added nginx rate limiting

--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -20,6 +20,9 @@ events {
 }
 
 http {
+  # set up rate limiting - https://www.howtoforge.com/rate-limiting-with-nginx
+  limit_req_zone $binary_remote_addr zone=one:10m rate=4r/s;
+
   # nginx will find this file in the config directory set at nginx build time
   include mime.types;
 
@@ -98,6 +101,9 @@ http {
     }
 
     location @proxy_to_app {
+      # use rate-limiting
+      limit_req zone=one burst=4;
+
       # an HTTP header important enough to have its own Wikipedia entry:
       #   http://en.wikipedia.org/wiki/X-Forwarded-For
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
