--- a/circle.yml
+++ b/circle.yml
@@ -19,9 +19,9 @@ dependencies:
     - pip install -r pip-requirements.txt
 
 ## Customize database
-database:
-  override:
-    - scripts/collab/data-update.sh
+#database:
+#  override:
+#    - scripts/collab/data-update.sh
 
 ## Customize test commands
 test:
