--- a/circle.yml
+++ b/circle.yml
@@ -19,12 +19,11 @@ dependencies:
     - pip install -r pip-requirements.txt
 
 ## Customize database
-database:
-  override:
-    - scripts/collab/data-update.sh
+#database:
+#  override:
+#    - scripts/collab/data-update.sh
 
 ## Customize test commands
 test:
   override:
     - scripts/testing/unit.sh
-    - scripts/testing/integration.sh
