docker setup complete for circleci

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,9 @@ machine:
   python:
     version: 2.7.9
 
+  services:
+    - docker
+
 ## Customize dependencies
 dependencies:
   pre:
@@ -15,15 +18,25 @@ dependencies:
     # which fails the mock package install. See https://github.com/testing-cabal/mock/issues/261
     - pip install -U pip wheel setuptools
 
-
     - pip install -r pip-requirements.txt
 
+    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+
+    - docker pull oasisvali/hwcentral:mysql
+    - docker run --name mysql -d -p 8006:3306 mysql
+
+    - docker pull oasisvali/hwcentral:cabinet
+    - docker run --name cabinet -p 9878:9878 -d -e DOCKER_HOST_IP=$(ifconfig docker0 | grep \"inet addr:\" | awk -F':' '{print $2}' | awk '{split($0,a," "); print a[1]}')  cabinet
+
 ## Customize database
-#database:
-#  override:
-#    - scripts/collab/data-update.sh
+database:
+  override:
+    - scripts/collab/data-update.sh
 
 ## Customize test commands
 test:
+  pre:
+    - ./manage.py collectstatic --noinput
+
   override:
-    - scripts/testing/unit.sh
+    - scripts/testing/all.sh
