working version ready, to be tested

--- a/scripts/database/enforcer_config.json
+++ b/scripts/database/enforcer_config.json
@@ -2,8 +2,12 @@
   "supported": {
     "8": {
       "1": {
-        "1": null,
-        "2": null
+        "questions": [
+          1,2,3
+        ],
+        "aql": [
+          1,2,3
+        ]
       }
     }
   }
