added revision sem2

--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -329,6 +329,25 @@
         "chapters": [
           "Visualizing Solids"
         ]
+      },
+      {
+        "board": 1,
+        "school": 1,
+        "standard": 8,
+        "subject": 1,
+        "assignments": [
+          {
+            "number": 42,
+            "chapter": "Revision"
+          },
+          {
+            "number": 43,
+            "chapter": "Revision"
+          }
+        ],
+        "chapters": [
+          "Revision"
+        ]
         }
     ]
 }
