--- a/scripts/database/enforcer_config.json
+++ b/scripts/database/enforcer_config.json
@@ -1,5 +1,19 @@
 {
   "supported": {
+    "9": {
+      "1": {
+        "questions": [
+          18,
+          19,
+          20
+        ],
+        "aql": [
+          18,
+          19,
+          20
+        ]
+      }
+    },
     "8": {
       "1": {
         "questions": [
