--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -339,10 +339,91 @@
           {
             "number": 42,
             "chapter": "Revision"
+          },
+          {
+            "number": 43,
+            "chapter": "Revision"
           }
         ],
         "chapters": [
           "Revision"
+        ]
+      },
+      {
+        "board": 1,
+        "school": 1,
+        "standard": 9,
+        "subject": 1,
+        "assignments": [
+          {
+            "number": 1,
+            "chapter": "Polynomials"
+          },
+          {
+            "number": 2,
+            "chapter": "Polynomials"
+          },
+          {
+            "number": 3,
+            "chapter": "Polynomials"
+          },
+          {
+            "number": 4,
+            "chapter": "Polynomials"
+          },
+          {
+            "number": 5,
+            "chapter": "Number Systems"
+          },
+          {
+            "number": 6,
+            "chapter": "Number Systems"
+          },
+          {
+            "number": 7,
+            "chapter": "Number Systems"
+          },
+          {
+            "number": 8,
+            "chapter": "Number Systems"
+          },
+          {
+            "number": 9,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 10,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 11,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 12,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 13,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 14,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 15,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 16,
+            "chapter": "Surface Areas and Volumes"
+          }
+        ],
+        "chapters": [
+          "Polynomials",
+          "Number Systems",
+          "Surface Areas and Volumes"
         ]
         }
     ]
