added first science chapter

--- a/scripts/database/enforcer_config.json
+++ b/scripts/database/enforcer_config.json
@@ -15,6 +15,14 @@
       }
     },
     "8": {
+      "2": {
+        "questions": [
+          21
+        ],
+        "aql": [
+          21
+        ]
+      },
       "1": {
         "questions": [
           1,
