made qb reloader faster and smarter

--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -1,6 +1,6 @@
 {
     "blocks": [
-        {
+      {
             "board": 1,
             "school": 1,
             "standard": 8,
@@ -440,6 +440,7 @@
         "chapters": [
           "Microorganisms: Friend and Foe"
         ]
-        }
+      },
+      "new_blocks_below"
     ]
 }
