--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -441,6 +441,56 @@
           "Microorganisms: Friend and Foe"
         ]
       },
+      {
+        "board": 1,
+        "school": 1,
+        "standard": 8,
+        "subject": 2,
+        "assignments": [
+          {
+            "number": 5,
+            "chapter": "Coal and Petroleum"
+          },
+          {
+            "number": 9,
+            "chapter": "Reproduction in Animals"
+          },
+          {
+            "number": 10,
+            "chapter": "Reaching the Age of Adolescence"
+          },
+          {
+            "number": 11,
+            "chapter": "Force and Pressure"
+          },
+          {
+            "number": 12,
+            "chapter": "Friction"
+          },
+          {
+            "number": 13,
+            "chapter": "Sound"
+          },
+          {
+            "number": 16,
+            "chapter": "Light"
+          },
+          {
+            "number": 17,
+            "chapter": "Stars and the Solar System"
+          }
+        ],
+        "chapters": [
+          "Coal and Petroleum",
+          "Reproduction in Animals",
+          "Reaching the Age of Adolescence",
+          "Force and Pressure",
+          "Friction",
+          "Sound",
+          "Light",
+          "Stars and the Solar System"
+        ]
+      },
       "new_blocks_below"
     ]
 }
