--- a/scripts/database/enforcer_config.json
+++ b/scripts/database/enforcer_config.json
@@ -1,4 +1,7 @@
+
 {
+  "NOTES": "pks to be used here i.e. chapter's db pk",
+
   "supported": {
     "9": {
       "1": {
@@ -77,6 +80,24 @@
           15,
           16,
           17
+        ]
+      }
+    },
+    "10": {
+      "1": {
+        "questions" : [
+          30,
+          31,
+          32,
+          33,
+          34
+        ],
+        "aql": [
+          30,
+          31,
+          32,
+          33,
+          34
         ]
       }
     }
