openshiksha pivot - devops

--- a/devops/nginx.conf
+++ b/devops/nginx.conf
@@ -77,7 +77,7 @@ http {
     listen 9878 deferred; # for Linux
 
     client_max_body_size 4G;
-    server_name hwcentral.in www.hwcentral.in;
+    server_name openshiksha.org www.openshiksha.org;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
