--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -557,6 +557,63 @@
           "Probability"
         ]
       },
-      "new_blocks_below"
+      "new_blocks_below",
+      {
+        "board": 1,
+        "school": 1,
+        "standard": 10,
+        "subject": 1,
+        "assignments": [
+          {
+            "number": 12,
+            "chapter": "Statistics"
+          },
+          {
+            "number": 13,
+            "chapter": "Statistics"
+          },
+          {
+            "number": 14,
+            "chapter": "Statistics"
+          },
+          {
+            "number": 15,
+            "chapter": "Areas Related to Circles"
+          },
+          {
+            "number": 16,
+            "chapter": "Areas Related to Circles"
+          },
+          {
+            "number": 17,
+            "chapter": "Areas Related to Circles"
+          },
+          {
+            "number": 18,
+            "chapter": "Quadratic Equations"
+          },
+          {
+            "number": 19,
+            "chapter": "Quadratic Equations"
+          },
+          {
+            "number": 20,
+            "chapter": "Quadratic Equations"
+          },
+          {
+            "number": 21,
+            "chapter": "Quadratic Equations"
+          },
+          {
+            "number": 26,
+            "chapter": "Surface Areas and Volumes"
+          }
+        ],
+        "chapters": [
+          "Statistics",
+          "Areas Related to Circles",
+          "Quadratic Equations"
+        ]
+      }
     ]
 }
