added 8 more exercises

--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -557,7 +557,6 @@
           "Probability"
         ]
       },
-      "new_blocks_below",
       {
         "board": 1,
         "school": 1,
@@ -613,6 +612,50 @@
           "Statistics",
           "Areas Related to Circles",
           "Quadratic Equations"
+        ]
+      },
+      "new_blocks_below",
+      {
+        "board": 1,
+        "school": 1,
+        "standard": 10,
+        "subject": 1,
+        "assignments": [
+          {
+            "number": 22,
+            "chapter": "Real Numbers"
+          },
+          {
+            "number": 23,
+            "chapter": "Real Numbers"
+          },
+          {
+            "number": 24,
+            "chapter": "Real Numbers"
+          },
+          {
+            "number": 25,
+            "chapter": "Real Numbers"
+          },
+          {
+            "number": 27,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 28,
+            "chapter": "Surface Areas and Volumes"
+          },
+          {
+            "number": 34,
+            "chapter": "Polynomials"
+          },
+          {
+            "number": 35,
+            "chapter": "Polynomials"
+          }
+        ],
+        "chapters": [
+          "Real Numbers"
         ]
       }
     ]
