--- a/scripts/database/question_bank_reloader_config.json
+++ b/scripts/database/question_bank_reloader_config.json
@@ -498,6 +498,7 @@
           "Stars and the Solar System"
         ]
       },
+      "new_blocks_below",
       {
         "board": 1,
         "school": 1,
@@ -729,7 +730,6 @@
           "Triangles",
           "Pair of Linear Equations in 2 Variables"
         ]
-      },
-      "new_blocks_below"
+      }
     ]
 }
